name:                hangman
version:             0.1.0.0
synopsis:            hangman
description:         Please see README.md
homepage:            no homepage
license:             BSD3
license-file:        LICENSE
author:              cwyang
maintainer:          cwyang
copyright:           cwyang
category:            Web
build-type:          Simple
extra-source-files:   data/dict.txt
cabal-version:       >=1.10

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
